@@ -1,9 +1,7 @@
 package domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import exception.LottoNotEnoughMoneyException;
@@ -11,59 +9,36 @@ import exception.LottoNotEnoughMoneyException;
 public class LottoMachine {
 
     private static final int LOTTO_PRICE = 1000;
-    private static final List<Integer> NUMBER_POOL = generateNumberPool();
 
-    private static List<Integer> generateNumberPool() {
-        return IntStream.rangeClosed(LottoNumber.MIN_NUMBER, LottoNumber.MAX_NUMBER)
-            .boxed()
-            .collect(Collectors.toList());
-    }
-
-    public Lottos buyLotto(int money, int manualCount, List<List<Integer>> manualNumbers) {
+    public Lottos buyLotto(Money money, int manualCount, List<LottoNumbers> manualLottoNumbers) {
         validateEnoughMoney(money, manualCount);
-        Lottos manualLottos = buyManualLottos(manualNumbers);
-        int autoCount = money / LOTTO_PRICE - manualCount;
+        Lottos manualLottos = buyManualLottos(manualLottoNumbers);
+        int autoCount = money.getAmount() / LOTTO_PRICE - manualCount;
         Lottos autoLottos = buyAutoLottos(autoCount);
         return combineLottos(manualLottos, autoLottos);
     }
 
-    private void validateEnoughMoney(int money, int manualCount) {
-        if (money < LOTTO_PRICE) {
+    private void validateEnoughMoney(Money money, int manualLottoCount) {
+        if (money.getAmount() < LOTTO_PRICE) {
             throw new LottoNotEnoughMoneyException("로또 구매 금액은 최소 " + LOTTO_PRICE + "원 이상이어야 합니다.");
         }
-        if (money < LOTTO_PRICE * manualCount) {
+        if (money.getAmount() < LOTTO_PRICE * manualLottoCount) {
             throw new LottoNotEnoughMoneyException("수동으로 구매할 로또 개수보다 적은 금액을 입력하셨습니다.");
         }
     }
 
-    private Lottos buyManualLottos(List<List<Integer>> manualNumbers) {
+    private Lottos buyManualLottos(List<LottoNumbers> manualNumbers) {
         List<Lotto> lottos = manualNumbers.stream()
             .map(Lotto::new)
-            .collect(Collectors.toList());
+            .toList();
         return new Lottos(lottos);
     }
 
     private Lottos buyAutoLottos(int count) {
-        List<Lotto> lottos = new ArrayList<>();
-        for (int i = 0; i < count; i++) {
-            lottos.add(generateLotto());
-        }
+        List<Lotto> lottos = IntStream.range(0, count)
+            .mapToObj(i -> new Lotto())
+            .toList();
         return new Lottos(lottos);
-    }
-
-    private Lotto generateLotto() {
-        List<Integer> shuffledNumbers = generateShuffleNumbers();
-        return new Lotto(selectLottoNumbers(shuffledNumbers));
-    }
-
-    private List<Integer> generateShuffleNumbers() {
-        List<Integer> numbers = new ArrayList<>(NUMBER_POOL);
-        Collections.shuffle(numbers);
-        return numbers;
-    }
-
-    private List<Integer> selectLottoNumbers(List<Integer> numbers) {
-        return numbers.subList(0, LottoNumbers.NUMBER_COUNT);
     }
 
     private Lottos combineLottos(Lottos manualLottos, Lottos autoLottos) {
